--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -2,3 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - manifests/todo_app/deployment.yaml
+  - manifests/todo_app/service.yaml
