--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -3,3 +3,4 @@ kind: Kustomization
 resources:
   - manifests/todo_app/deployment.yaml
   - manifests/todo_app/service.yaml
+  - manifests/todo_app/ingress.yaml
