--- a/todo_app/Dockerfile
+++ b/todo_app/Dockerfile
@@ -5,13 +5,17 @@ WORKDIR /app
 
 COPY . . 
 
-RUN apk add musl-dev && cargo build --release
+RUN apk add openssl-dev musl-dev 
+RUN RUSTFLAGS="-Ctarget-feature=-crt-static" cargo build --release
 
 # Production stage
-FROM debian:buster-slim
+FROM rust:alpine3.21
 
 WORKDIR /usr/local/bin
 
 COPY --from=builder /app/target/release/todo_app .
+
+RUN mkdir /usr/local/files && chmod -R 664 /usr/local/files && \ 
+    chown -R root:root /usr/local/files && chmod g+s /usr/local/files
 
 CMD ["./todo_app"]
